* marks an incompatible change


  * no more executable why3ml (why3 now handles WhyML files)
  o [Provers] support for Z3 4.0
  o [Sessions] a small change in the format. Why3 is still able to
    read session files in the old format.
  o completed support for the "Out Of Memory" prover result
  o [Why3ml] new construct "abstract e { q }"
  o [Coq output] quotes in identifiers remain quotes in Coq
  o [Coq output] default tactic is now "intros ..." with a pattern
    that matches the structure of the goal
  o [why3replayer] option -obsolete-only
  o workaround for a bug about modulo operator in Alt-Ergo 0.94
  o fixed a consistency issue with set.Fset theory
  o co-inductive predicates
  o new option -e for "why3session latex" allows to specify when to
    split tables in parts

version 0.72, May 11, 2012
==========================
  o [Coq] new tactic "why3" to call external provers as oracles
  o [Coq output] new feature: theory realizations (see manual, chapter 9)
  o new tool why3session (see manual, section 6.7)
  o new tool why3doc (see manual, section 6.8)
  o support for multiple versions of the same prover (see manual, section 5.5)
  o [why3ide] new features, including prover upgrade, alternate editors
  o complete support for limiting provers' memory usage
  o improved support on Microsoft Windows
  o fix BTS 14221
  o fix BTS 14190
  o fix BTS 12457
  o fix BTS 13854
  o fix BTS 13849
  o [syntax] new syntax "constant x:ty" and "constant x:ty = e" to
    introduce constants, as an alternative to "function"
  o [TPTP] new parser for TPTP files with support for the newest
    TFA1 format (TPTP with polymorphic types and arithmetic)
  o [API] Dtype declaration kind is split into two: Dtype for
    declarations of a single abstract type or type alias, and
    Ddata for a list of (mutually recursive) algebraic types.
    Similarly, Dlogic declaration kind is split into Dparam for
    a single abstract function/predicate symbol and Dlogic for