@@ -1,6 +1,7 @@
 * marks an incompatible change
 
 
+  o [IDE] "Clean" was cleaning too much
   * no more executable why3ml (why3 now handles WhyML files)
   o [Provers] support for Z3 4.0
   o [Sessions] a small change in the format. Why3 is still able to
